# texrocket

./: .gitignore  Pipfile  README.md  TEMPLATE.tex  build.py  setup.cfg
example/: default.json  other.json
texrocket/: main.py
