[metadata]
name = texrocket
version = 0.0.6
author = Alberto Mosconi
author_email = albertomaria.mosconi@gmail.com
description = A minimal LaTeX template engine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/albertomosconi/texrocket
project_urls =
    Bug Tracker = https://github.com/albertomosconi/texrocket/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Text Processing :: Markup :: LaTeX

[options]
packages = texrocket
python_requires = >=3.6

[options.entry_points]
console_scripts =
    texrocket = texrocket.main:main
